--- a/book.tex
+++ b/book.tex
@@ -592,7 +592,7 @@ the network is a slower and at times unreliable form of
 \end{itemize}
 
 While most of the detail of how these components work is best left 
-to computer builders, it helps to have a some terminology
+to computer builders, it helps to have some terminology
 so we can talk about these different parts as we write our programs.
 
 As a programmer, your job is to use and orchestrate 
@@ -13119,6 +13119,8 @@ Eric Hofer,
 Eytan Adar,
 Peter Robinson,
 Deborah J. Nelson,
+Jonathan C. Anthony,
+Eden Rassette,
 
 % CONTRIB
 
