--- a/book.tex
+++ b/book.tex
@@ -247,7 +247,7 @@ but there have been some changes.  Nearly all number-oriented
 exercises have been replaced with data-oriented exerises.
 Topics are presented in the order to needed to build increasingly
 sophisticated data analysis solutions.  Some topics like {\tt try} and
-{\tt catch} are pulled forward and presented as part of the chapter
+{\tt except} are pulled forward and presented as part of the chapter
 on conditionals while other concepts like functions are left until 
 they are needed to handle program complexity rather introduced 
 as an early lesson in abstraction.  The word ``recursion'' does not 
@@ -3377,7 +3377,7 @@ name.
 \index{argument}
 
 The empty parentheses after the name indicate that this function
-doesn't take any arguments.   Later will build functions that 
+doesn't take any arguments.   Later we will build functions that 
 take arguments as their inputs.
 
 \index{parentheses!empty}
@@ -5847,7 +5847,7 @@ programs have just been transient fun exercises to learn Python.
 
 In this chapter, we start to work with {\bf Secondary Memory} 
 (or files).
-Secondary memory not erased even when the power is turned off.  
+Secondary memory is not erased even when the power is turned off.  
 Or in the case of a USB flash drive, the
 data can we write from our programs can be removed from the 
 system and transported to another system.
@@ -13127,6 +13127,8 @@ Justin Feezell,
 Chuanqi Li,
 Gerald Gordinier,
 Gavin Thomas Strassel,
+Ryan Clement,
+Alissa Talley,
 
 % CONTRIB
 
