--- a/RE.tex
+++ b/RE.tex
@@ -1,6 +1,9 @@
 \chapter{Regular Expressions}
 
 So far we have been reading through files, looking for patterns and extracting various bits of lines that we find interesting.  We have been using string methods like {\tt split} and {\tt find} and using lists and string slicing to extract portions of the lines.
+\index{regular expressons}
+\index{regex}
+\index{re module}
 
 This task of searching and extracting is so common that Python has a very powerful library called {\bf regular expressions} that handles many of these tasks quite elegantly.  The reason we have not introduced regular expressions earlier in the book because while they are very powerful, they are a little complicated and their syntax takes a little getting used to. 
 
@@ -11,6 +14,7 @@ Regular expressions are almost their own little programming language for searchi
 \url{http://docs.python.org/library/re.html}
 
 The regular expression library must be imported into your program before you can use it.  The simplest use of the regular expression library is the {\tt search()} function.  The following program demonstrates a trivial use of the search function.
+\index{regex!search}
 
 \beforeverb
 \begin{verbatim}
@@ -24,10 +28,11 @@ for line in hand:
 \afterverb
 %
 We open the file, loop through each line and use the regular expression {\tt search()} to only print out lines that contain the string ``From:''.   This program really does not use the real power of regular expressions since we could have just as easily used {\tt line.find()} to accomplish the same result.
+\index{string!find}
 
 The power of the regular expressions comes when there are special characters that we can add to the search string that allow us to more precisely control which lines match the string.  Adding these special characters to our regular expression allow us to do sophisticated matching and extraction while writing very little code.
 
-For example, if we wanted to only match lines where ``From:'' was at the beginning of the line, we could add the caret character which matches the beginning of a line and change our application as follows:
+For example, if we wanted to only match lines where ``From:'' was at the beginning of the line, we could add the caret character which a special charater in regular expressions that matches the beginning of a line and change our application as follows:
 
 \beforeverb
 \begin{verbatim}
@@ -40,11 +45,14 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-Now we will only match lines that start with the string ``From:''.  This is still a very simple example that we could have done equivalently with the {\tt startswith()} method from the string library.
+Now we will only match lines that {\em start with} the string ``From:''.  This is still a very simple example that we could have done equivalently with the {\tt startswith()} method from the string library.  But it serves to introduce the notion that regular expressions contain special action characters that give us more control as to what will match the regular expression.
+\index{string!startswith}
 
 \section{Character Matching in Regular Expressions}
 
 There are a number of other special characters that let us build even more powerful regular expressions.  The most commonly used special character is the period character which matches any character.
+\index{wild card}
+\index{regex!wild card}
 
 In the following example, the regular expression ``F..m:'' would match any of the strings ``From:'', ``Fxxm:'', ``F12m:'', or ``F!@m:'' since the period characters in the regular expression match any character.
 
@@ -76,12 +84,29 @@ for line in hand:
 %
 The search string ``\verb"^"From:.+@'' will successfully match lines that start with ``From:'' followed by one or more characters ``.+'' followed by an at-sign.  So this will match the following line:
 
-\beforeverb
-\begin{verbatim}
-From: stephen.marquard@uct.ac.za
-\end{verbatim}
-\afterverb
-%
+{\tt
+{\bf From:}\underline{ stephen.marquard}{\bf @}uct.ac.za
+}
+
+You can think of the ``.+'' wildcard as expanding to match all the characters between the 
+colon character and the at-sign.  
+
+
+{\tt
+{\bf From:}\underline{.+}{\bf @}
+}
+
+It is good to think of the plus and asterisk characters as ``pushy''.  For example the following string would match the last at-sign in the string as the ``.+'' pushes outwards as shown below:
+
+{\tt
+{\bf From:}\underline{ stephen.marquard@uct.ac.za, csev@umich.edu, and cwen}{\bf @}iupui.edu
+}
+
+It is possible to tell an asterisk or plus-sign not to be so ``greedy'' by adding 
+another character.   See the detailed dcumentation for information on turning off the 
+greed behavior.
+\index{greedy}
+
 \section{Extracting Data Using Regular Expressions}
 
 If we want to extract data from a string in Python we can use the {\tt findall()} method to extract all of the substrings which match a regular expression.  Lets use the example of wanting to extract anything that looks like an E-Mail address from any line regardless of format.  For example, we want to pull the e-mail addresses from each of the following lines:
@@ -97,6 +122,8 @@ Author: stephen.marquard@uct.ac.za
 \afterverb
 %
 We don't want to write code for each of the types of lines, splitting and slicing differently for each line.  This following program uses {\tt findall()} to find the lines with E-Mail addresses in them and extracts one or more addresses from each of those lines.
+\index{findall}
+\index{regex!findall}
 
 \beforeverb
 \begin{verbatim}
@@ -165,6 +192,7 @@ Here is our new regular expression:
 \afterverb
 %
 This is getting a little complicated and you can begin to see why regular expressions are their own little language unto themselves.  Translating this regular expression, we are looking for substrings that start with a {\em single} lowercase letter, upper case letter, or number ``[a-zA-Z0-9]'' followed by zero or more non blank characters ``{\textbackslash}S*'', followed by an at-sign, followed by zero or more non-blank characters ``{\textbackslash}S*'' followed by an upper or lower case letter.  Note that we switched from ``+'' to ``*'' to indicate zero-or-more non-blank characters.   Remember that the ``*'' or ``+'' applies to the single character immediately to the left of the plus or asterisk.
+\index{regex!character sets(brackets)}
 
 If we use this expression in our program, our data is much cleaner:
 
@@ -245,8 +273,11 @@ X-DSPAM-Probability: 0.0000
 \afterverb
 %
 But now we have to solve the problem of extracting the numbers using {\tt split}.  While it would be simple enough to use {\tt split}, we can use another feature of regular expressions to both search and parse the line at the same time.
+\index{string!split}
 
-Parenthesis are another special character in regular expressions.  When you add parenthesis to a regular expression they are kind of "invisible" when matching the string, but when you are using {\tt findall()}, parenthesis indicates that you while you want the whole expression to match, you only are interesed in extracting a portion of the substring that matches the regular expression.  
+Parentheses are another special character in regular expressions.  When you add parentheses to a regular expression they are kind of "invisible" when matching the string, but when you are using {\tt findall()}, parentheses indicates that you while you want the whole expression to match, you only are interesed in extracting a portion of the substring that matches the regular expression.  
+\index{regex!parentheses}
+\index{parentheses!regular expression}
 
 So we make the following change to our program:
 
@@ -262,7 +293,7 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-Instead of calling {\tt search()}, we add a parenthesis around the part of the regular expression that represents the floating point number to indicate we only want {\tt findall()} to give us back the floating point number from the matching substring.
+Instead of calling {\tt search()}, we add a parentheses around the part of the regular expression that represents the floating point number to indicate we only want {\tt findall()} to give us back the floating point number from the matching substring.
 
 The output from this program is as follows:
 
@@ -302,7 +333,7 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
-Translating our regular expression, we are looking for lines that start with ``Details:', followed by any any number of characters ``.*'' followed by ``rev='' and then by one or more digits.   We want lines that match the entire expression but we only want to extract the integer number at the end of the line so we surround ``[0-9]+'' with parenthesis.  
+Translating our regular expression, we are looking for lines that start with ``Details:', followed by any any number of characters ``.*'' followed by ``rev='' and then by one or more digits.   We want lines that match the entire expression but we only want to extract the integer number at the end of the line so we surround ``[0-9]+'' with parentheses.  
 
 When we run the program, we get the following output:
 
@@ -340,7 +371,7 @@ We can do this far simpler with the following regular expression:
 %
 The translation of this regular expression is that we are looking for lines that start with ``From '' (note the space) followed by any number of characters ``.*'' followed by a space followed by two digits ``[0-9][0-9]'' followed by a colon character.  This is the definition of the kinds of lines we are looking for.  
 
-In order to pull out only the hour using {\tt findall()}, we add parenthesis around the two digits as follows:
+In order to pull out only the hour using {\tt findall()}, we add parentheses around the two digits as follows:
 
 \beforeverb
 \begin{verbatim}
@@ -408,7 +439,7 @@ You can specify ranges of characters using the minus sign.  This example is a si
 When the first character in the set notation is a caret, it inverts the logic.  This example matches a single character that is anything other than an upper or lower case character.
 
 ( ) \newline
-When parenthesis are added to a regular expression, they are ignored for the purpose of matching, but allow you to extract a particular subset of the matched string rather than the whole string when using {\tt findall()}.
+When parentheses are added to a regular expression, they are ignored for the purpose of matching, but allow you to extract a particular subset of the matched string rather than the whole string when using {\tt findall()}.
 
 {\textbackslash}b \newline
 Matches the empty string, but only at the start or end of a word.
@@ -505,15 +536,19 @@ or don't have access to a web browser or search engine.
 
 \item{greedy matching:}
 The notion that the ``+'' and ``*'' characters in a regular expression expand outward to match the largest possible string.
+\index{greedy}
+\index{greedy matching}
 
 \item{grep:}
 A command available in most UNIX systems that searches through text files looking for lines that match regular expressions.  The command name stands for "Generalized Regular Expression Parser".
+\index{grep}
 
 \item{regular expression:}
 A language for expressing more complex search strings.  A regular exprtession may contain special characters that indicate that a search only matches at the beginning or end of a line or many other similar capabilities.
 
 \item{wild card:}
 A special character that matches any character.   In regular expressions the wild card character is the period character.
+\index{wild card}
 
 \end{description}
 
