Fix date typo and preface.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@70687 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -253,9 +253,10 @@ they are needed to handle program complexity rather introduced
 as an early lesson in abstraction.  The word ``recursion'' does not 
 appear in the book at all.
 
-In chapters 11-14, nearly all of the material is brand new, focusing
+In chapters 11-15, nearly all of the material is brand new, focusing
 on real-world uses and simple examples of Python for data analysis 
-including automating tasks on your computer, retrieving data across 
+including regular expressons for searching and parsing, 
+automating tasks on your computer, retrieving data across 
 the network, scraping web pages for data, 
 using web services, parsing XML data, and creating 
 and using databases using Structured Query Language.
@@ -303,7 +304,7 @@ results of my efforts and I hope that you the reader are pleased with
 Charles Severance\\
 www.dr-chuck.com\\
 Ann Arbor, MI, USA\\
-July 25, 2011
+July 25, 2010
 
 Charles Severance is a 
 Clinical Associate Professor 
